fixed overflow-x

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
     font-family: "Source Sans 3", sans-serif;
     font-weight: 300;
+    overflow-x: hidden;
 }
 
 #navbar {
